--- a/RockYou/Shared/NavMenu.razor
+++ b/RockYou/Shared/NavMenu.razor
@@ -14,7 +14,7 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="js">
-                <span class="oi oi-code" aria-hidden="true"></span> JS
+                <span class="oi oi-code" aria-hidden="true"></span> JS Interop
             </NavLink>
         </li>
         <li class="nav-item px-3">
